--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,16 @@ header {
     background-repeat: no-repeat;
 }
 
+.nav-item {
+    margin: 10px 16px;
+}
+
+.navbar-brand img {
+    height: 46px;
+    margin-right: 8px;
+    width: 48px;
+}
+
 .section-white {
     background-color: #FFFFFF;
     padding: 60px 0 40px;
@@ -40,4 +50,15 @@ header {
 
 .opaque {
     opacity: 0.8
+}
+
+footer {
+    background-color: #2F4F4F;
+    padding: 35px 0;
+}
+
+.footer-logo {
+  height: 22px;
+  margin-bottom: 3px;
+  width: 22px;
 }
