Finished adding all web app projects

--- a/css/style.css
+++ b/css/style.css
@@ -1,67 +1,6 @@
 
-.header-main {
-    background-color: #FFFFFF;
-    /* F0F8FF */
-    padding: 200px 0;
-    background-image: url("../img/crecer_opaque.jpg");
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-}
 
-.header-crece {
-    background-color: #778899;
-    /* F0F8FF */
-    padding: 200px 0;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-}
-
-.nav-item {
-    margin: 10px 16px;
-}
-
-.navbar-brand img {
-    height: 46px;
-    margin-right: 8px;
-    width: 48px;
-}
-
-footer {
-    background-color: #2F4F4F;
-    padding: 35px 0;
-}
-
-.footer-logo {
-  height: 22px;
-  margin-bottom: 3px;
-  width: 22px;
-}
-
-.section-white {
-    background-color: #FFFFFF;
-    padding: 60px 0 40px;
-}
-
-.section-light {
-    background-color: #F0F0F0;
-    padding: 60px 0 40px;
-}
-
-.second-section {
-    padding: 200px 0;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-image: url("..img/sobre_nosotros/mario_zambrano_opaque.jpeg");
-}
-
-.section-pastor {
-    background-color: #F0F8FF;
-    padding: 200px 0;
-    background-image: url("../img/pastor/pastor_podium_opaque.jpg");
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
+.section-gray {
+    /* background-color: lightGray; */
+    padding: 32px;
 }
